[package]
edition = "2021"
name = "ratatui_ts"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossterm = "0.27.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.13", default-features = false, features = [
  "napi9",
  "async",
] }
napi-derive = "2.13"
ratatui = "0.26.3"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
